@@ -15,7 +15,6 @@
 #if STXXL_HAVE_WINCALL_FILE
 
 #include <stxxl/bits/io/request_impl_basic.h>
-#include <stxxl/bits/common/debug.h>
 
 #include <windows.h>
 
@@ -54,7 +53,6 @@ void wincall_file::serve(const request * req) throw (io_error)
 
         if (type == request::READ)
         {
-            STXXL_DEBUGMON_DO(io_started(buffer));
             DWORD NumberOfBytesRead = 0;
             if (!ReadFile(handle, buffer, bytes, &NumberOfBytesRead, NULL))
             {
@@ -70,13 +68,9 @@ void wincall_file::serve(const request * req) throw (io_error)
                 stxxl_win_lasterror_exit(" partial read: missing " << (bytes - NumberOfBytesRead) << " out of " << bytes << " bytes",
                                          io_error);
             }
-
-            STXXL_DEBUGMON_DO(io_finished(buffer));
         }
         else
         {
-            STXXL_DEBUGMON_DO(io_started(buffer));
-
             DWORD NumberOfBytesWritten = 0;
             if (!WriteFile(handle, buffer, bytes, &NumberOfBytesWritten, NULL))
             {
@@ -92,8 +86,6 @@ void wincall_file::serve(const request * req) throw (io_error)
                 stxxl_win_lasterror_exit(" partial write: missing " << (bytes - NumberOfBytesWritten) << " out of " << bytes << " bytes",
                                          io_error);
             }
-
-            STXXL_DEBUGMON_DO(io_finished(buffer));
         }
     }
 }
